<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportPlace">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:id="@+id/title_report"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txt_report"
        android:hint="@string/to_je_ovo"
        android:inputType="text"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_report"
        android:hint="@string/znate_li_neke_zanimljivosti_o_ovome_mjestu"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_report"
        android:inputType="text"
        />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/preview"
        app:layout_constraintTop_toBottomOf="@id/txt_report"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/choose"
        android:contentDescription="@string/image"
        android:visibility="gone"

        />



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uslikaj_sliku"
        android:id="@+id/shoot"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/preview"
        app:layout_constraintBottom_toTopOf="@id/choose"
        />
 <Button
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/odaberi_sliku"
     android:id="@+id/choose"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toBottomOf="@id/shoot"
     app:layout_constraintBottom_toTopOf="@id/upload"
     />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/po_alji"
        android:id="@+id/upload"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose"
        app:layout_constraintBottom_toBottomOf="parent"
        android:enabled="false"

        />
    
    
</android.support.constraint.ConstraintLayout>